--- a/index.html
+++ b/index.html
@@ -1,233 +1,163 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <title>Smiley vs Kakskes</title>
-  <style>
-    html,body {
-      margin: 0;
-      padding: 0;
-      background: #111;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-    }
-    canvas {
-      background: #222;
-      border: 2px solid #444;
-    }
-  </style>
+<head><meta charset="UTF-8"><title>Sprite Game</title>
+<style>
+html,body{margin:0;padding:0;background:#111;display:flex;justify-content:center;align-items:center;height:100vh}
+canvas{background:#222;border:2px solid #444}
+</style>
 </head>
 <body>
 <canvas id="gameCanvas" width="800" height="600"></canvas>
 <script>
 const canvas = document.getElementById("gameCanvas");
-const ctx = canvas.getContext("2d");
+const ctx     = canvas.getContext("2d");
 
 const keys = {};
-document.addEventListener("keydown", e => keys[e.key] = true);
-document.addEventListener("keyup",   e => keys[e.key] = false);
+document.addEventListener("keydown", e => keys[e.key]=true);
+document.addEventListener("keyup",   e => keys[e.key]=false);
 
-const SMILEY_SIZE = 40;
-const SPEED_INCREMENT = 0.15;
-const MAX_VERTICAL_SPD = 5;
-const poopObstacles = [];
-let score = 0;
-let gameOver = false;
-let scoreTimer;
+// Sprite laden
+const images = {};
+function loadImage(name, src){return new Promise(res=>{
+  const img=new Image();
+  img.onload=()=>{images[name]=img;res();};
+  img.src=src;
+});}
 
-const player = {
-  x: canvas.width / 2 - SMILEY_SIZE / 2,
-  y: canvas.height - SMILEY_SIZE * 1.5,
-  width : SMILEY_SIZE,
-  height: SMILEY_SIZE,
-  speed : 3,
-  verticalSpeed: 1,
-  emoji : "😊"
+async function start(){
+  await loadImage('smiley','smiley.png');
+  await loadImage('poop','poop.png');
+  resetGame();
+}
+
+const SMILEY_SIZE=40, SPEED_INC=0.15, MAX_VSPD=5;
+let poopObstacles=[], score=0, gameOver=false, scoreTimer;
+
+const player={
+  x:canvas.width/2-SMILEY_SIZE/2,
+  y:canvas.height-SMILEY_SIZE*1.5,
+  w:SMILEY_SIZE,h:SMILEY_SIZE,
+  speed:3, verticalSpeed:1
 };
+const centerCircle={x:canvas.width/2,y:canvas.height/2,radius:50};
 
-const centerCircle = {
-  x: canvas.width / 2,
-  y: canvas.height / 2,
-  radius: 50
-};
+function distance(x1,y1,x2,y2){return Math.hypot(x1-x2,y1-y2);}
 
-// ⭕ Collision helpers
-function distance(x1, y1, x2, y2) {
-  const dx = x1 - x2;
-  const dy = y1 - y2;
-  return Math.hypot(dx, dy);
-}
-function circleCircleOverlap(x1, y1, r1, x2, y2, r2) {
-  const dx = x1 - x2;
-  const dy = y1 - y2;
-  const distSq = dx * dx + dy * dy;
-  const rSum = r1 + r2;
-  return distSq < rSum * rSum;
-}
-function rectCircleCollision(rect, circle) {
-  const rectCX = rect.x + rect.width / 2;
-  const rectCY = rect.y + rect.height / 2;
-  const circleCX = circle.x + circle.size / 2;
-  const circleCY = circle.y + circle.size / 2;
-  const radius = circle.size / 2;
+function rectPixelCollision(r,s){
+  const minX = Math.max(r.x, s.x);
+  const minY = Math.max(r.y, s.y);
+  const maxX = Math.min(r.x+r.w, s.x+s.w);
+  const maxY = Math.min(r.y+r.h, s.y+s.h);
+  if(minX>=maxX||minY>=maxY) return false;
 
-  const dx = Math.abs(circleCX - rectCX);
-  const dy = Math.abs(circleCY - rectCY);
+  const w=maxX-minX, h=maxY-minY;
+  const off = document.createElement('canvas');
+  off.width = w; off.height = h;
+  const octx = off.getContext('2d');
 
-  if (dx > rect.width / 2 + radius) return false;
-  if (dy > rect.height / 2 + radius) return false;
-  if (dx <= rect.width / 2) return true;
-  if (dy <= rect.height / 2) return true;
+  octx.drawImage(images.smiley, r.x + (minX - r.x), r.y + (minY - r.y), w, h,
+                0, 0, w, h);
+  const imgA = octx.getImageData(0,0,w,h).data;
 
-  const cornerDistSq = (dx - rect.width / 2) ** 2 + (dy - rect.height / 2) ** 2;
-  return cornerDistSq <= radius * radius;
-}
+  octx.clearRect(0,0,w,h);
+  octx.drawImage(images.poop, s.x + (minX - s.x), s.y + (minY - s.y), w, h,
+                0, 0, w, h);
+  const imgB = octx.getImageData(0,0,w,h).data;
 
-// 💩 Spawn zonder overlap
-function spawnPoopObstacle() {
-  const maxTries = 20;
-  let tries = 0;
-  let valid = false;
-  let newPoop;
-
-  while (!valid && tries < maxTries) {
-    const scale = Math.random() * 2 + 1; // schaal 1–3
-    const size = SMILEY_SIZE * scale;
-    const x = Math.random() * (canvas.width - size);
-    const y = Math.random() * ((canvas.height * 0.75) - size);
-    newPoop = { x, y, size, emoji: "💩" };
-
-    const overlapsScoreCircle = circleCircleOverlap(
-      centerCircle.x, centerCircle.y, centerCircle.radius,
-      x + size / 2, y + size / 2, size / 2
-    );
-
-    const overlapsOtherPoops = poopObstacles.some(p =>
-      circleCircleOverlap(
-        p.x + p.size / 2, p.y + p.size / 2, p.size / 2,
-        x + size / 2, y + size / 2, size / 2
-      )
-    );
-
-    if (!overlapsScoreCircle && !overlapsOtherPoops) valid = true;
-    tries++;
+  for(let i=3; i<imgA.length; i+=4){
+    if(imgA[i]!==0 && imgB[i]!==0) return true;
   }
-
-  if (valid) poopObstacles.push(newPoop);
+  return false;
 }
 
-// 🔁 Game flow
-function movePlayer() {
-  if (keys["ArrowLeft"] || keys["a"]) player.x -= player.speed;
-  if (keys["ArrowRight"] || keys["d"]) player.x += player.speed;
-
-  player.y -= player.verticalSpeed;
-
-  if (player.y + player.height < 0) {
-    player.y = canvas.height;
-    player.x = Math.random() * (canvas.width - player.width);
-    const n = Math.floor(Math.random() * 2) + 1;
-    for (let i = 0; i < n; i++) spawnPoopObstacle();
-
-    player.verticalSpeed = Math.min(player.verticalSpeed + SPEED_INCREMENT, MAX_VERTICAL_SPD);
+function checkCollisions(){
+  if(distance(player.x+player.w/2, player.y+player.h/2,
+    centerCircle.x, centerCircle.y) < centerCircle.radius + player.w/2) return true;
+  for(const p of poopObstacles){
+    if(rectPixelCollision(player,p)) return true;
   }
-
-  player.x = Math.max(0, Math.min(canvas.width - player.width, player.x));
+  return false;
 }
 
-function checkCollisions() {
-  const cx = player.x + player.width / 2;
-  const cy = player.y + player.height / 2;
+function spawnPoop(){
+  for(let t=0;t<20;t++){
+    const scale=Math.random()*2+1, size=SMILEY_SIZE*scale;
+    const x=Math.random()*(canvas.width-size),
+          y=Math.random()*((canvas.height*0.75)-size);
+    const newP={x,y,w:size,h:size};
+    const cx=x, cy=y, cw=size, ch=size;
 
-  if (distance(cx, cy, centerCircle.x, centerCircle.y) < centerCircle.radius + player.width / 2)
-    return true;
-
-  return poopObstacles.some(p => rectCircleCollision(player, p));
-}
-
-function drawPlayer() {
-  ctx.font = "32px Arial";
-  ctx.textAlign = "center";
-  ctx.textBaseline = "middle";
-  ctx.fillText(player.emoji, player.x + player.width / 2, player.y + player.height / 2);
-}
-
-function drawPoops() {
-  for (const o of poopObstacles) {
-    ctx.font = `${o.size}px Arial`;
-    ctx.fillText(o.emoji, o.x + o.size / 2, o.y + o.size / 2);
+    let ok=true;
+    if(distance(cx+cw/2, cy+ch/2, centerCircle.x, centerCircle.y)
+       < centerCircle.radius + cw/2) ok=false;
+    poopObstacles.forEach(o=>{
+      if(ok && distance(cx+cw/2, cy+ch/2, o.x+o.w/2, o.y+o.h/2)
+         < cw/2+o.w/2) ok=false;
+    });
+    if(ok){poopObstacles.push(newP);break;}
   }
 }
 
-function drawScoreCircle() {
+function movePlayer(){
+  if(keys["ArrowLeft"]||keys["a"]) player.x-=player.speed;
+  if(keys["ArrowRight"]||keys["d"])player.x+=player.speed;
+  player.y-=player.verticalSpeed;
+
+  if(player.y+player.h<0){
+    player.y=canvas.height;
+    player.x=Math.random()*(canvas.width-player.w);
+    for(let i=0;i<Math.floor(Math.random()*2)+1;i++)spawnPoop();
+    player.verticalSpeed=Math.min(player.verticalSpeed+SPEED_INC, MAX_VSPD);
+  }
+  player.x=Math.max(0,Math.min(canvas.width-player.w,player.x));
+}
+
+function draw(){
+  ctx.clearRect(0,0,canvas.width,canvas.height);
+  ctx.drawImage(images.smiley, player.x, player.y, player.w, player.h);
+  poopObstacles.forEach(p=>ctx.drawImage(images.poop, p.x,p.y, p.w,p.h));
   ctx.beginPath();
-  ctx.fillStyle = "red";
-  ctx.arc(centerCircle.x, centerCircle.y, centerCircle.radius, 0, Math.PI * 2);
+  ctx.fillStyle="red";
+  ctx.arc(centerCircle.x, centerCircle.y, centerCircle.radius, 0,2*Math.PI);
   ctx.fill();
-
-  ctx.fillStyle = "white";
-  ctx.font = "24px Arial";
-  ctx.textAlign = "center";
-  ctx.textBaseline = "middle";
+  ctx.fillStyle="white";
+  ctx.font="24px Arial";
+  ctx.textAlign="center";
+  ctx.textBaseline="middle";
   ctx.fillText(score, centerCircle.x, centerCircle.y);
 }
 
-function showGameOver() {
-  ctx.fillStyle = "rgba(0,0,0,.6)";
-  ctx.fillRect(0, 0, canvas.width, canvas.height);
-
-  ctx.fillStyle = "white";
-  ctx.font = "40px Arial";
-  ctx.textAlign = "center";
-  ctx.fillText("💀 Game Over", canvas.width / 2, canvas.height / 2 - 40);
-  ctx.font = "24px Arial";
-  ctx.fillText(`Score: ${score}`, canvas.width / 2, canvas.height / 2);
-  ctx.fillText("Druk op ENTER om opnieuw te spelen", canvas.width / 2, canvas.height / 2 + 40);
+function showGameOver(){
+  ctx.fillStyle="rgba(0,0,0,.6)";
+  ctx.fillRect(0,0,canvas.width,canvas.height);
+  ctx.fillStyle="white"; ctx.font="40px Arial";
+  ctx.textAlign="center";
+  ctx.fillText("💀 Game Over",canvas.width/2,canvas.height/2-40);
+  ctx.font="24px Arial";
+  ctx.fillText(`Score: ${score}`,canvas.width/2,canvas.height/2);
+  ctx.fillText("Press ENTER to replay",canvas.width/2,canvas.height/2+40);
 }
 
-function gameLoop() {
-  if (gameOver) {
-    showGameOver();
-    return;
-  }
-
-  ctx.clearRect(0, 0, canvas.width, canvas.height);
-
+function gameLoop(){
+  if(gameOver){ showGameOver();return; }
   movePlayer();
-  if (checkCollisions()) {
-    gameOver = true;
-    clearInterval(scoreTimer);
-    showGameOver();
-    return;
-  }
-
-  drawPoops();
-  drawScoreCircle();
-  drawPlayer();
-
+  if(checkCollisions()){gameOver=true; clearInterval(scoreTimer);}
+  draw();
   requestAnimationFrame(gameLoop);
 }
 
-function resetGame() {
-  poopObstacles.length = 0;
-  player.x = canvas.width / 2 - player.width / 2;
-  player.y = canvas.height - player.height * 1.5;
-  player.verticalSpeed = 1;
-  score = 0;
-  gameOver = false;
-  spawnPoopObstacle();
+function resetGame(){
+  poopObstacles=[]; score=0; gameOver=false;
+  player.y=canvas.height-SMILEY_SIZE*1.5;
+  player.verticalSpeed=1;
+  spawnPoop();
   clearInterval(scoreTimer);
-  scoreTimer = setInterval(() => { if (!gameOver) score++; }, 1000);
+  scoreTimer=setInterval(()=>{if(!gameOver)score++;},1000);
   gameLoop();
 }
 
-document.addEventListener("keydown", e => {
-  if (gameOver && e.key === "Enter") resetGame();
-});
-
-resetGame();
+document.addEventListener("keydown",e=>{if(gameOver&&e.key==="Enter")resetGame();});
+start();
 </script>
 </body>
 </html>
